WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 150246
"enum class" some IDB enums
https://bugs.webkit.org/show_bug.cgi?id=150246
Summary
"enum class" some IDB enums
Brady Eidson
Reported
2015-10-16 12:56:50 PDT
"enum class" some IDB enums
Attachments
Patch for landing
(16.58 KB, patch)
2015-10-16 13:23 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-10-16 13:21:56 PDT
Very mechanical task - The patch I'm about to land was reviewed in person by Alex Christensen
Brady Eidson
Comment 2
2015-10-16 13:22:14 PDT
Actually, no - I'll use CQ
Brady Eidson
Comment 3
2015-10-16 13:23:08 PDT
Created
attachment 263315
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2015-10-16 13:25:34 PDT
Attachment 263315
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/IDBKeyPath.cpp:284: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 5
2015-10-16 14:11:36 PDT
Comment on
attachment 263315
[details]
Patch for landing Clearing flags on attachment: 263315 Committed
r191210
: <
http://trac.webkit.org/changeset/191210
>
WebKit Commit Bot
Comment 6
2015-10-16 14:11:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug